# add_drop_bot

./: Makefile  pyproject.toml
migrations/: env.py
migrations/versions/: d1abf1ddbc72_updated_student_orm.py
src/: config.py  ioc.py  main.py  middlewares.py
src/adapters/database/: postgres.py  redis.py
src/adapters/models/: student_orm.py  subject_orm.py
src/adapters/parser/: grades_page_service.py  home_page_service.py  login_service.py  profile_page_service.py  schedule_page_service.py  transcript_page_service.py  year_terms_service.py
src/adapters/repositories/: redis_repository.py  student_repository.py  subject_repository.py
src/bot/: middleware.py  register.py  states.py
src/bot/handlers/: common_keyboards.py  main_menu_handler.py  menu_handler.py  start_menu_handler.py
src/bot/routers/: common_router.py  exception_router.py
src/bot/routers/main/: auth_router.py  menu_router.py  start_routes.py
src/bot/routers/student/: grades_router.py  menu.py  menu_router.py  profile.py  profile_router.py  schedule_router.py  transcript_router.py
src/domain/: exceptions.py
src/domain/dto/: student_dto.py  subject_dto.py
src/domain/interfaces/: base_dto.py  redis_repository_interface.py  student_repository_interface.py  subject_repository_interface.py
